plugins {
    id 'java'
    id "com.github.johnrengelman.shadow" version "7.0.0"
}

group 'dev.felnull'
version '1.20'
apply plugin: 'application'
mainClassName = 'dev.felnull.ttsvoice.Main'

compileJava.options.encoding = 'UTF-8'
compileTestJava.options.encoding = 'UTF-8'

jar {
    manifest {
        attributes 'Main-Class': 'dev.felnull.ttsvoice.Main'
        attributes 'Implementation-Version': project.version
    }
}

repositories {
    mavenCentral()
    maven {
        url 'https://jitpack.io'
    }
    maven {
        name 'm2-dv8tion'
        url 'https://m2.dv8tion.net/releases'
    }
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'

    implementation 'com.google.code.gson:gson:2.9.0'
    implementation 'net.dv8tion:JDA:5.0.0-alpha.16'
    implementation 'org.apache.logging.log4j:log4j-core:2.17.2'
    implementation 'dev.felnull:felnull-java-library:1.55'
    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'commons-io:commons-io:2.11.0'
    implementation 'com.github.walkyst:lavaplayer-fork:1.3.98.1'
    implementation 'org.jsoup:jsoup:1.15.1'
    implementation 'com.mariten:kanatools:1.3.0'
    implementation 'com.atilika.kuromoji:kuromoji:0.9.0'
    implementation 'com.atilika.kuromoji:kuromoji-ipadic:0.9.0'
    implementation 'com.ibm.icu:icu4j:71.1'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'blue.endless:jankson:1.2.1'
}

test {
    useJUnitPlatform()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}